--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "create-react-app": "^3.4.1",
     "gh-pages": "^2.0.1",
     "live-server": "^1.2.1",
     "react": "^16.8.6",
@@ -11,7 +12,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.1.1",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://kellyninjang.github.io/instagram"
+  "homepage": "https://kellyericang.github.io/instagram"
 }
