--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "create-react-app": "^3.4.1",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.2.0",
     "live-server": "^1.2.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-transition-group": "^4.1.1",
+    "react-scripts": "^3.4.1",
+    "react-transition-group": "^4.4.1",
     "tachyons": "^4.12.0"
   },
   "scripts": {
