--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "bootstrap": "^4.5.0",
     "create-react-app": "^3.4.1",
     "gh-pages": "^2.2.0",
+    "jquery": "^3.5.1",
     "live-server": "^1.2.1",
+    "popper.js": "^1.16.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.4.1",
     "react-transition-group": "^4.4.1",
-    "tachyons": "^4.12.0"
+    "sass": "^1.26.9",
+    "tachyons": "^4.12.0",
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
